# lymui-node

./: .gitignore  .gitmodules  .npmignore  .travis.yml  CLAUDE.md  Cargo.toml  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  azure-pipelines.yml  binding.gyp  bindings.h  build.rs  cbindgen.toml  index.js  index.ts  installer.js  installer.py  package-lock.json  package.json  tsconfig.json
@ts/: binding.ts  config.ts  index.ts  inputs.ts  output.ts
docs/: changelog.md  index.md  regular.md  rgb.md  space.md  typescript.md  xyz.md
examples/: rgb.c
lymui-c/: Cargo.toml  bindings.h  build.rs  my_header.h
lymui-c/examples/: rgb.c  shade.c  test.c  xyz.c
lymui-c/src/: color.rs  lib.rs
lymui-c/src/binding/: color.rs  generator.rs  mod.rs
lymui-c/src/binding/kind/: grayscale.rs  mod.rs  rgb.rs  xyz.rs
node-binding/: Cargo.toml  node-binding.node  package-lock.json  package.json  test.js
node-binding/src/: lib.rs
node-binding/src/binding/: mapping.rs  mod.rs
node-binding/src/binding/color/: argb.rs  cymk.rs  hcl.rs  hex.rs  hlab.rs  hsl.rs  hsv.rs  hue.rs  hwb.rs  mod.rs  rgb.rs  xyz.rs  ycbcr.rs  yuv.rs
node-binding/src/mapping/: grayscale.rs  mod.rs  rgb.rs  xyz.rs
node-binding/tests/: rgb.test.js  xyz.test.js
src/: binding_util.c  bootstrap.c  bridge.c  color.rs  convert_regular.c  convert_rgb.c  convert_space.c  convert_xyz.c  deserializer.c  deserializer_opts.c  deserializer_space.c  factory.c  formater.c  lib.rs  mapping.rs
tests/: argb.test.js  cymk.test.js  grayscale.test.js  hcl.test.js  hex.test.js  hsl.test.js  hsv.test.js  hwb.test.js  (+12 more)
(+37 files in other folders)
