[package]
name = "node-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde"] }
napi-derive = "2"
lymui = { path = "../../lymui/lymui", features = ["js"]}
anyhow = "1.0.71"

[build-dependencies]
napi-build = "1"
